style: fix overflow ul

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
 ul{
     list-style: none;
     overflow-y: auto;
-    height: 77%;
+    height: calc(100% - 180px);
 }
 
 
